// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverbookedDocumentsList tests should load the details component 1`] = `
<Loader>
  <Error>
    <ResultsTable
      fixed={true}
      headerActionClickHandler={null}
      headerActionComponent={null}
      rowActionClickHandler={[Function]}
      rows={Array []}
      seeAllComponent={
        <SeeAllButton
          clickHandler={[Function]}
          disabled={false}
          fluid={false}
        />
      }
      showMaxRows={5}
      singleLine={true}
      subtitle="Documents with more requests than the number of available items for loan."
      title="Overbooked documents"
    />
  </Error>
</Loader>
`;

exports[`OverbookedDocumentsList tests should render documents 1`] = `
<OverbookedDocumentsList
  data={
    Object {
      "hits": Array [
        Object {
          "ID": "doc1",
          "circulation": Object {
            "loanableItems": 2,
            "pendingLoans": 1,
          },
          "created": "2018-01-01T10:05:00.000Z",
          "document_pid": "doc1",
          "title": "X",
          "updated": "2018-01-01T10:05:00.000Z",
        },
        Object {
          "ID": "doc2",
          "created": "2018-01-01T10:05:00.000Z",
          "document_pid": "doc2",
          "title": "X",
          "updated": "2018-01-01T10:05:00.000Z",
        },
      ],
      "total": 2,
    }
  }
  fetchOverbookedDocuments={[Function]}
  history={[Function]}
  showMaxEntries={5}
>
  <Loader>
    <Error>
      <ResultsTable
        fixed={true}
        headerActionClickHandler={null}
        headerActionComponent={null}
        rowActionClickHandler={[Function]}
        rows={
          Array [
            Object {
              "ID": "doc1",
              "Loan requests": undefined,
              "Loanable items": undefined,
              "Title": "X",
            },
            Object {
              "ID": "doc2",
              "Title": "X",
            },
          ]
        }
        seeAllComponent={
          <SeeAllButton
            clickHandler={[Function]}
            disabled={false}
            fluid={false}
          />
        }
        showMaxRows={5}
        singleLine={true}
        subtitle="Documents with more requests than the number of available items for loan."
        title="Overbooked documents"
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={13}
                    >
                      <div
                        className="middle aligned thirteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Overbooked documents"
                          subheader="Documents with more requests than the number of available items for loan."
                        >
                          <h3
                            className="ui header"
                          >
                            Overbooked documents
                            <HeaderSubheader
                              content="Documents with more requests than the number of available items for loan."
                            >
                              <div
                                className="sub header"
                              >
                                Documents with more requests than the number of available items for loan.
                              </div>
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={3}
                    >
                      <div
                        className="right aligned three wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Table
              as="table"
              fixed={true}
              selectable={true}
              singleLine={true}
              striped={true}
            >
              <table
                className="ui fixed selectable single line striped table"
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      "ID",
                      "Title",
                      "Loan requests",
                      "Loanable items",
                    ]
                  }
                  withRowAction={true}
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            collapsing={true}
                            width={2}
                          >
                            <TableCell
                              as="th"
                              className=""
                              collapsing={true}
                              width={2}
                            >
                              <th
                                className="collapsing two wide"
                              />
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="ID"
                            width={2}
                          >
                            <TableCell
                              as="th"
                              className=""
                              width={2}
                            >
                              <th
                                className="two wide"
                              >
                                ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Title"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Title
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Loan requests"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Loan requests
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Loanable items"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Loanable items
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      "ID",
                      "Title",
                      "Loan requests",
                      "Loanable items",
                    ]
                  }
                  rowActionClickHandler={[Function]}
                  rows={
                    Array [
                      Object {
                        "ID": "doc1",
                        "Loan requests": undefined,
                        "Loanable items": undefined,
                        "Title": "X",
                      },
                      Object {
                        "ID": "doc2",
                        "Title": "X",
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="doc1"
                        key="doc1"
                      >
                        <tr
                          className=""
                          data-test="doc1"
                        >
                          <TableCell
                            as="td"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                circular={true}
                                compact={true}
                                data-test="btn-view-details-doc1"
                                icon="eye"
                                onClick={[Function]}
                              >
                                <button
                                  className="ui circular compact icon button"
                                  data-test="btn-view-details-doc1"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="eye"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="eye icon"
                                    />
                                  </Icon>
                                </button>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-doc1"
                            key="0-doc1"
                          >
                            <td
                              className=""
                              data-test="ID-doc1"
                            >
                              doc1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Title-doc1"
                            key="1-doc1"
                          >
                            <td
                              className=""
                              data-test="Title-doc1"
                            >
                              X
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Loan requests-doc1"
                            key="2-doc1"
                          >
                            <td
                              className=""
                              data-test="Loan requests-doc1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Loanable items-doc1"
                            key="3-doc1"
                          >
                            <td
                              className=""
                              data-test="Loanable items-doc1"
                            >
                              -
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="doc2"
                        key="doc2"
                      >
                        <tr
                          className=""
                          data-test="doc2"
                        >
                          <TableCell
                            as="td"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                circular={true}
                                compact={true}
                                data-test="btn-view-details-doc2"
                                icon="eye"
                                onClick={[Function]}
                              >
                                <button
                                  className="ui circular compact icon button"
                                  data-test="btn-view-details-doc2"
                                  onClick={[Function]}
                                >
                                  <Icon
                                    as="i"
                                    name="eye"
                                  >
                                    <i
                                      aria-hidden="true"
                                      className="eye icon"
                                    />
                                  </Icon>
                                </button>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-doc2"
                            key="0-doc2"
                          >
                            <td
                              className=""
                              data-test="ID-doc2"
                            >
                              doc2
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Title-doc2"
                            key="1-doc2"
                          >
                            <td
                              className=""
                              data-test="Title-doc2"
                            >
                              X
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Loan requests-doc2"
                            key="2-doc2"
                          >
                            <td
                              className=""
                              data-test="Loan requests-doc2"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Loanable items-doc2"
                            key="3-doc2"
                          >
                            <td
                              className=""
                              data-test="Loanable items-doc2"
                            >
                              -
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={4}
                  seeAllComponent={
                    <SeeAllButton
                      clickHandler={[Function]}
                      disabled={false}
                      fluid={false}
                    />
                  }
                  showMaxRows={5}
                />
              </table>
            </Table>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</OverbookedDocumentsList>
`;

exports[`OverbookedDocumentsList tests should render show a message with no documents 1`] = `
<OverbookedDocumentsList
  data={
    Object {
      "hits": Array [],
      "total": 0,
    }
  }
  fetchOverbookedDocuments={[Function]}
  history={[Function]}
  showMaxEntries={5}
>
  <Loader>
    <Error>
      <ResultsTable
        fixed={true}
        headerActionClickHandler={null}
        headerActionComponent={null}
        rowActionClickHandler={[Function]}
        rows={Array []}
        seeAllComponent={
          <SeeAllButton
            clickHandler={[Function]}
            disabled={false}
            fluid={false}
          />
        }
        showMaxRows={5}
        singleLine={true}
        subtitle="Documents with more requests than the number of available items for loan."
        title="Overbooked documents"
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={13}
                    >
                      <div
                        className="middle aligned thirteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Overbooked documents"
                          subheader="Documents with more requests than the number of available items for loan."
                        >
                          <h3
                            className="ui header"
                          >
                            Overbooked documents
                            <HeaderSubheader
                              content="Documents with more requests than the number of available items for loan."
                            >
                              <div
                                className="sub header"
                              >
                                Documents with more requests than the number of available items for loan.
                              </div>
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={3}
                    >
                      <div
                        className="right aligned three wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Message
              data-test="no-results"
            >
              <div
                className="ui message"
                data-test="no-results"
              >
                There are no 
              </div>
            </Message>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</OverbookedDocumentsList>
`;
